objects/Batch__c.object
<CustomObject>
    <description>it store batch detail</description>
    <label>Batch</label>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>End_date__c</fullName>
        <formula>Start_Date__c +Batch_in_Course__r.Duration_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Fresher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fresher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentrecordid__c</fullName>
        <formula>Batch_in_Course__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>parentrecordid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_in_Course__c</fullName>
        <label>Batch in Course</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Course__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
</CustomObject>